downloading & updating is pretty much done now, although untested. Gotta add in ptero integration now, and add some way to delete it from mongo. Might to that through the app itself via a command